--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "postcss": "^8.4.39",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-icons": "^5.2.1",
     "react-router-dom": "^6.24.1",
     "react-scripts": "5.0.1",
     "tailwindcss": "^3.4.5",
