--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,10 +13,15 @@
   "dependencies": {
     "@types/react-router-dom": "^5.3.3",
     "clsx": "^2.1.1",
+    "moment": "^2.30.1",
     "react": "^18.3.1",
+    "react-calendar": "^5.0.0",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.25.1",
+    "styled-components": "^6.1.12",
     "zustand": "^4.5.4"
   },
   "devDependencies": {
