--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
     "gen-pwa": "pwa-assets-generator --preset minimal public/vite.svg"
   },
   "dependencies": {
+    "@types/react-modal": "^3.16.3",
     "@types/react-router-dom": "^5.3.3",
     "clsx": "^2.1.1",
     "moment": "^2.30.1",
@@ -18,6 +19,7 @@
     "react-calendar": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-modal": "^3.16.1",
     "react-router-dom": "^6.25.1",
     "zustand": "^4.5.4"
   },
