--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -12,3 +12,13 @@ spring.jwt.secret=bumsoosososososososossoossosososoososososossoo
 
 spring.data.redis.host=localhost
 spring.data.redis.port=6379
+
+# file upload path(window)
+file.path=C:\\KidsLink\\img
+
+# S3 config
+#cloud.aws.s3.bucket=버킷이름
+#cloud.aws.stack.auto=false
+#cloud.aws.region.static=ap-northeast-2
+#cloud.aws.credentials.access-key=IAM계정
+#cloud.aws.credentials.secret-key=IAM비밀번호
