S11P12C206-460 feat : 선생님 상담 오픈 기능

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -15,10 +15,13 @@ spring.data.redis.port=6379
 
 # file upload path(window)
 file.path=C:\\KidsLink\\img
-
 # S3 config
 #cloud.aws.s3.bucket=버킷이름
 #cloud.aws.stack.auto=false
 #cloud.aws.region.static=ap-northeast-2
 #cloud.aws.credentials.access-key=IAM계정
 #cloud.aws.credentials.secret-key=IAM비밀번호
+
+
+# 김지원
+python.script.path=build/resources/scripts/facial_recognition.py
