--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@types/react-modal": "^3.16.3",
     "@types/react-router-dom": "^5.3.3",
+    "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "moment": "^2.30.1",
     "react": "^18.3.1",
