--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -48,3 +48,7 @@ dependencies {
 tasks.named('test') {
 	useJUnitPlatform()
 }
+tasks.withType(JavaCompile) {
+	options.compilerArgs << "-parameters"
+}
+
