--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -22,6 +22,10 @@ file.path=C:\\KidsLink\\img
 #cloud.aws.credentials.access-key=IAM계정
 #cloud.aws.credentials.secret-key=IAM비밀번호
 
+file.upload-dir=${UPLOAD_DIR:C:/uploads}
+file.max-size=5242880
+spring.servlet.multipart.max-file-size=10MB
+spring.servlet.multipart.max-request-size=10MB
 
 # 김지원
 python.script.path=build/resources/scripts/facial_recognition.py
