--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -19,9 +19,12 @@
 
     /* Linting */
     "strict": true,
-    "noUnusedLocals": true,
-    "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noImplicitAny": true, 
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "noFallthroughCasesInSwitch": true,
+    "strictNullChecks": false, 
+    
   },
   "include": ["src"]
 }
