--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,26 +1,26 @@
 spring.application.name=KidsLink
 
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/kidslink?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true
-spring.datasource.username=ssafy
-spring.datasource.password=ssafy
+spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/kidslink?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true}
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME:ssafy}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD:ssafy}
+spring.data.redis.host=${SPRING_DATA_REDIS_HOST:localhost}
+spring.data.redis.port=${SPRING_DATA_REDIS_PORT:6379}
 
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jwt.secret=bumsoosososososososossoossosososoososososossoo
 
-spring.data.redis.host=localhost
-spring.data.redis.port=6379
 
 # file upload path(window)
 file.path=C:\\KidsLink\\img
 # S3 config
-#cloud.aws.s3.bucket=버킷이름
+#cloud.aws.s3.bucket=ë²í·ì´ë¦
 #cloud.aws.stack.auto=false
 #cloud.aws.region.static=ap-northeast-2
-#cloud.aws.credentials.access-key=IAM계정
-#cloud.aws.credentials.secret-key=IAM비밀번호
+#cloud.aws.credentials.access-key=IAMê³ì 
+#cloud.aws.credentials.secret-key=IAMë¹ë°ë²í¸
 
 file.upload-dir=${UPLOAD_DIR:C:/uploads}
 file.max-size=5242880
