--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,9 +25,11 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-modal": "^3.16.1",
+    "react-responsive": "^10.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.25.1",
     "styled-components": "^6.1.12",
+    "typewriter-effect": "^2.21.0",
     "yup": "^1.4.0",
     "zustand": "^4.5.4"
   },
