feat: 스토리지 서비스 구현(s3, local 주입)  #S11P12C206-327
- S3와 local 중 의존성 주입이 가능하도록 기능 분리
- S3 설정 마저 진행 후 테스트 예정(현재 local로 연결)

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -33,7 +33,7 @@ dependencies {
 	implementation group: 'io.swagger.core.v3', name: 'swagger-annotations', version: '2.2.22'
 
 //	S3
-//	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
+	implementation 'org.springframework.cloud:spring-cloud-starter-aws:2.2.6.RELEASE'
 
 	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-data-redis'
@@ -56,3 +56,30 @@ tasks.withType(JavaCompile) {
 	options.compilerArgs << "-parameters"
 }
 
+//// Environment profile configuration
+//ext {
+//	profile = project.hasProperty('profile') ? project.getProperty('profile') : 'dev'
+//}
+//
+//processResources {
+//	filesMatching('application.properties') {
+//		expand(profile: profile)
+//	}
+//}
+//
+//bootRun {
+//	systemProperties = System.properties
+//	systemProperty 'spring.profiles.active', profile
+//}
+//
+//task printProfile {
+//	doLast {
+//		println "Active profile: ${profile}"
+//	}
+//}
+//
+//// Custom task for building with different profiles
+//task buildWithProd(type: GradleBuild) {
+//	tasks = ['build']
+//	startParameter.projectProperties = ['profile': 'prod']
+//}
