--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -16,13 +16,18 @@ spring.jwt.secret=bumsoosososososososossoossosososoososososossoo
 # file upload path(window)
 file.path=C:\\KidsLink\\img
 # S3 config
-#cloud.aws.s3.bucket=ë²í·ì´ë¦
+#cloud.aws.s3.bucket=\u00EB\u00B2\u0084\u00ED\u0082\u00B7\u00EC\u009D\u00B4\u00EB\u00A6\u0084
 #cloud.aws.stack.auto=false
 #cloud.aws.region.static=ap-northeast-2
-#cloud.aws.credentials.access-key=IAMê³ì 
-#cloud.aws.credentials.secret-key=IAMë¹ë°ë²í¸
+#cloud.aws.credentials.access-key=IAM\u00EA\u00B3\u0084\u00EC\u00A0\u0095
+#cloud.aws.credentials.secret-key=IAM\u00EB\u00B9\u0084\u00EB\u00B0\u0080\u00EB\u00B2\u0088\u00ED\u0098\u00B8
+use.s3=false
 
 file.upload-dir=${UPLOAD_DIR:C:/uploads}
 file.max-size=5242880
+
 spring.servlet.multipart.max-file-size=10MB
 spring.servlet.multipart.max-request-size=10MB
+
+#spring.profiles.active=@profile@
+spring.profiles.active=dev
