feat: s3 버킷 연결 #S11P12C206-327
- 환경 변수 입력 후 사용 가능
- USE_S3 변수 조절로 local <-> s3 설정

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -10,24 +10,21 @@ spring.data.redis.port=${SPRING_DATA_REDIS_PORT:6379}
 spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
-spring.jwt.secret=bumsoosososososososossoossosososoososososossoo
+spring.jwt.secret=${SPRING_JWT_SECRET:bumsoosososososososossoossosososoososososossoo}
 
-
-# file upload path(window)
-file.path=C:\\KidsLink\\img
 # S3 config
-#cloud.aws.s3.bucket=\u00EB\u00B2\u0084\u00ED\u0082\u00B7\u00EC\u009D\u00B4\u00EB\u00A6\u0084
-#cloud.aws.stack.auto=false
-#cloud.aws.region.static=ap-northeast-2
-#cloud.aws.credentials.access-key=IAM\u00EA\u00B3\u0084\u00EC\u00A0\u0095
-#cloud.aws.credentials.secret-key=IAM\u00EB\u00B9\u0084\u00EB\u00B0\u0080\u00EB\u00B2\u0088\u00ED\u0098\u00B8
-use.s3=false
+cloud.aws.s3.bucket=${CLOUD_AWS_S3_BUCKET}
+cloud.aws.stack.auto=false
+cloud.aws.region.static=${AWS_REGION:ap-northeast-2}
+cloud.aws.credentials.access-key=${AWS_ACCESS_KEY_ID}
+cloud.aws.credentials.secret-key=${AWS_SECRET_ACCESS_KEY}
+use.s3=${USE_S3:false}
 
 file.upload-dir=${UPLOAD_DIR:C:/uploads}
-file.max-size=5242880
+file.max-size=${FILE_MAX_SIZE:5242880}
 
-spring.servlet.multipart.max-file-size=10MB
-spring.servlet.multipart.max-request-size=10MB
+spring.servlet.multipart.max-file-size=${SPRING_SERVLET_MULTIPART_MAX_FILE_SIZE:10MB}
+spring.servlet.multipart.max-request-size=${SPRING_SERVLET_MULTIPART_MAX_REQUEST_SIZE:10MB}
 
 #spring.profiles.active=@profile@
-spring.profiles.active=dev
+spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
