--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,9 +31,10 @@
     "react-responsive": "^10.0.0",
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.25.1",
+    "react-toastify": "^10.0.5",
     "styled-components": "^6.1.12",
-    "web-vitals": "^1.1.2",
     "typewriter-effect": "^2.21.0",
+    "web-vitals": "^1.1.2",
     "yup": "^1.4.0",
     "zustand": "^4.5.4"
   },
