--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -28,3 +28,6 @@ spring.servlet.multipart.max-request-size=${SPRING_SERVLET_MULTIPART_MAX_REQUEST
 
 #spring.profiles.active=@profile@
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
+
+logging.level.org.springframework=debug
+logging.level.org.springframework.web=debug
