--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -13,11 +13,11 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 spring.jwt.secret=${SPRING_JWT_SECRET:bumsoosososososososossoossosososoososososossoo}
 
 # S3 config
-cloud.aws.s3.bucket=${CLOUD_AWS_S3_BUCKET}
+cloud.aws.s3.bucket=${CLOUD_AWS_S3_BUCKET:bucket_name}
 cloud.aws.stack.auto=false
 cloud.aws.region.static=${AWS_REGION:ap-northeast-2}
-cloud.aws.credentials.access-key=${AWS_ACCESS_KEY_ID}
-cloud.aws.credentials.secret-key=${AWS_SECRET_ACCESS_KEY}
+cloud.aws.credentials.access-key=${AWS_ACCESS_KEY_ID:access_key}
+cloud.aws.credentials.secret-key=${AWS_SECRET_ACCESS_KEY:secret_key}
 use.s3=${USE_S3:false}
 
 file.upload-dir=${UPLOAD_DIR:C:/uploads}
@@ -28,6 +28,3 @@ spring.servlet.multipart.max-request-size=${SPRING_SERVLET_MULTIPART_MAX_REQUEST
 
 #spring.profiles.active=@profile@
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
-
-logging.level.org.springframework=debug
-logging.level.org.springframework.web=debug
