feat: openvidu 코드 추가

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,14 +11,19 @@
     "gen-pwa": "pwa-assets-generator --preset minimal public/vite.svg"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
     "@livekit/components-react": "^2.3.6",
     "@types/react-modal": "^3.16.3",
     "@types/react-router-dom": "^5.3.3",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "framer-motion": "^11.3.19",
     "livekit-client": "^2.4.0",
     "moment": "^2.30.1",
+    "openvidu-browser": "^2.30.1",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
     "react-confetti": "^6.1.0",
