feat: AI 서버 POST 요청 후 앨범 분류 데이터 양식 확인  #S11P12C206-341
- AI 서버 구현 후 POST 요청으로 분류 후 응답데이터 받는 양식 확인
- 추가적인 DTO 보완은 필요할듯

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -1,2 +1,7 @@
+#spring.security.oauth2.client.registration.naver.redirect-uri=https://kidslink.xyz:8080/login/oauth2/code/naver
+#spring.security.oauth2.client.registration.google.redirect-uri=https://kidslink.xyz:8080/login/oauth2/code/google
+#
+#server.ssl.enabled=true
+
 ai.server.url=https://kidslink.xyz:5000
 frontend.server.url=https://kidslink.xyz:5173
