--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -1,2 +1,7 @@
+#spring.security.oauth2.client.registration.naver.redirect-uri=http://localhost:8080/login/oauth2/code/naver
+#spring.security.oauth2.client.registration.google.redirect-uri=http://localhost:8080/login/oauth2/code/google
+#
+#server.ssl.enabled=false
+
 ai.server.url=http://localhost:5000
 frontend.server.url=http://localhost:5173
