--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -28,3 +28,22 @@ spring.servlet.multipart.max-request-size=${SPRING_SERVLET_MULTIPART_MAX_REQUEST
 
 #spring.profiles.active=@profile@
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
+
+#spring.security.oauth2.client.registration.naver.client-name=naver
+#spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
+#spring.security.oauth2.client.registration.naver.scope=name,email
+#
+#spring.security.oauth2.client.provider.naver.authorization-uri=https://nid.naver.com/oauth2.0/authorize
+#spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oauth2.0/token
+#spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
+#spring.security.oauth2.client.provider.naver.user-name-attribute=response
+#
+#spring.security.oauth2.client.registration.google.client-name=google
+#spring.security.oauth2.client.registration.google.authorization-grant-type=authorization_code
+#spring.security.oauth2.client.registration.google.scope=profile,email
+#
+## OAuth2 \uD658\uACBD\uBCC0\uC218
+#spring.security.oauth2.client.registration.naver.client-id=${NAVER_CLIENT_ID}
+#spring.security.oauth2.client.registration.naver.client-secret=${NAVER_CLIENT_SECRET}
+#spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+#spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
