--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,13 +12,19 @@
   },
   "dependencies": {
     "@livekit/components-react": "^2.3.6",
+    "@react-three/drei": "^9.109.2",
+    "@react-three/fiber": "^8.16.8",
+    "@react-three/postprocessing": "^2.16.2",
     "@types/react-modal": "^3.16.3",
     "@types/react-router-dom": "^5.3.3",
+    "@types/three": "^0.167.1",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "framer-motion": "^11.3.19",
     "livekit-client": "^2.4.0",
     "moment": "^2.30.1",
+    "postprocessing": "^6.36.0",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
     "react-confetti": "^6.1.0",
@@ -33,6 +39,7 @@
     "react-router-dom": "^6.25.1",
     "react-toastify": "^10.0.5",
     "styled-components": "^6.1.12",
+    "three": "^0.167.0",
     "typewriter-effect": "^2.21.0",
     "web-vitals": "^1.1.2",
     "yup": "^1.4.0",
