fix:전체문서 조회

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -28,7 +28,7 @@ spring.servlet.multipart.max-request-size=${SPRING_SERVLET_MULTIPART_MAX_REQUEST
 
 #spring.profiles.active=@profile@
 spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
-
+frontend.server.url=${FRONTEND_URL:http://localhost:5173}
 #spring.security.oauth2.client.registration.naver.client-name=naver
 #spring.security.oauth2.client.registration.naver.authorization-grant-type=authorization_code
 #spring.security.oauth2.client.registration.naver.scope=name,email
