--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,24 +11,25 @@
     "gen-pwa": "pwa-assets-generator --preset minimal public/vite.svg"
   },
   "dependencies": {
-    "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.13.0",
     "@emotion/styled": "^11.13.0",
     "@livekit/components-react": "^2.3.6",
+    "@mui/icons-material": "^5.16.5",
+    "@mui/material": "^5.16.5",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "@react-three/postprocessing": "^2.16.2",
     "@types/react-modal": "^3.16.3",
     "@types/react-router-dom": "^5.3.3",
+    "@types/styled-components": "^5.1.34",
     "@types/three": "^0.167.1",
     "axios": "^1.7.2",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
-    "framer-motion": "^11.3.19",
     "livekit-client": "^2.4.0",
     "moment": "^2.30.1",
-    "postprocessing": "^6.36.0",
     "openvidu-browser": "^2.30.1",
+    "postprocessing": "^6.36.0",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
     "react-confetti": "^6.1.0",
