--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,5 +1,10 @@
 spring.application.name=KidsLink
 
+server.servlet.encoding.enabled=true
+server.servlet.encoding.charset=UTF-8
+server.servlet.encoding.force=true
+server.tomcat.uri-encoding=UTF-8
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=${SPRING_DATASOURCE_URL:jdbc:mysql://localhost:3306/kidslink?useSSL=false&useUnicode=true&serverTimezone=Asia/Seoul&allowPublicKeyRetrieval=true}
 spring.datasource.username=${SPRING_DATASOURCE_USERNAME:ssafy}
@@ -23,7 +28,7 @@ use.s3=${USE_S3:false}
 file.upload-dir=${UPLOAD_DIR:C:/uploads}
 file.max-size=${FILE_MAX_SIZE:5242880}
 
-spring.servlet.multipart.max-file-size=${SPRING_SERVLET_MULTIPART_MAX_FILE_SIZE:10MB}
+spring.servlet.multipart.max-file-size=${SPRING_SERVLET_MULTIPART_MAX_FILE_SIZE:20MB}
 spring.servlet.multipart.max-request-size=${SPRING_SERVLET_MULTIPART_MAX_REQUEST_SIZE:200MB}
 
 #spring.profiles.active=@profile@
