--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -52,3 +52,7 @@ frontend.server.url=${FRONTEND_URL:http://localhost:5173}
 #spring.security.oauth2.client.registration.naver.client-secret=${NAVER_CLIENT_SECRET}
 #spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
 #spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
+
+# URL 변경 필요 openvidu.url=https://kidslink.xyz:8443
+openvidu.url: http://localhost:4443/
+openvidu.secret: MY_SECRET
