--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,6 +12,7 @@
   },
   "dependencies": {
     "@livekit/components-react": "^2.3.6",
+    "@react-google-maps/api": "^2.19.3",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "@react-three/postprocessing": "^2.16.2",
@@ -33,6 +34,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
+    "react-kakao-maps-sdk": "^1.1.27",
     "react-modal": "^3.16.1",
     "react-responsive": "^10.0.0",
     "react-responsive-carousel": "^3.2.23",
