fix: openvidu 관련 application.propreties 수정 #S11P12C206-468

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -54,5 +54,5 @@ frontend.server.url=${FRONTEND_URL:http://localhost:5173}
 #spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
 
 # URL 변경 필요 openvidu.url=https://kidslink.xyz:8443
-openvidu.url: http://localhost:4443/
-openvidu.secret: MY_SECRET
+openvidu.url=http://localhost:4443/
+openvidu.secret=MY_SECRET
