fix:프론트 백 서버 통신테스트

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -2,6 +2,12 @@
 #spring.security.oauth2.client.registration.google.redirect-uri=https://kidslink.xyz:8080/login/oauth2/code/google
 #
 #server.ssl.enabled=true
-
 ai.server.url=https://kidslink.xyz:5000
-frontend.server.url=https://kidslink.xyz:5173
+frontend.server.url=http://kidslink.xyz
+
+server.port=8080
+server.ssl.enabled=true
+server.ssl.key-store=/app/keystore.p12
+server.ssl.key-store-password=${SSL_KEY_STORE_PASSWORD}
+server.ssl.keyStoreType=PKCS12
+server.ssl.keyAlias=tomcat
