fix:데이터초기화시 사진경로수정

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,5 @@
 FROM openjdk:17-jdk
 ARG JAR_FILE=build/libs/*.jar
 COPY ${JAR_FILE} app.jar
+COPY src/main/resources/static/profiles /app/src/main/resources/static/profiles
 ENTRYPOINT ["java", "-Dspring.profiles.active=prod", "-jar", "app.jar"]
