--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -4,6 +4,8 @@
 #server.ssl.enabled=true
 ai.server.url=https://kidslink.xyz:5000
 frontend.server.url=http://kidslink.xyz
+server.url=https://www.kidslink.xyz:8080/api
+file.profile-dir=/app/src/main/resources/static/profiles
 
 server.port=8080
 server.ssl.enabled=true
