--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -4,8 +4,8 @@
 #server.ssl.enabled=false
 
 ai.server.url=http://localhost:5000
-
-
+server.url=http://localhost:8080/api
+file.profile-dir=/src/main/resources/static/profiles
 
 
 
