feat : 화상상담 비속어 인식 기능 구현 #S11P12C206-351
- stt() 구현
- 비속어 인식 기능 구현

--- a/backend/build.gradle
+++ b/backend/build.gradle
@@ -46,6 +46,7 @@ dependencies {
 
 	// OpenVidu Dependency
 	implementation 'io.openvidu:openvidu-java-client:2.30.0'
+	implementation 'org.apache.httpcomponents:httpclient:4.5.14'
 
     // Web Socket
 	implementation 'org.springframework.boot:spring-boot-starter-websocket'
