--- a/frontend/package.json
+++ b/frontend/package.json
@@ -41,6 +41,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-kakao-maps-sdk": "^1.1.27",
+    "react-loading-skeleton": "^3.4.0",
     "react-modal": "^3.16.1",
     "react-responsive": "^10.0.0",
     "react-responsive-carousel": "^3.2.23",
