--- a/frontend/package.json
+++ b/frontend/package.json
@@ -47,6 +47,7 @@
     "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.25.1",
     "react-slick": "^0.30.2",
+    "react-spinners": "^0.14.1",
     "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.12",
