feat: 회원가입 components 분리, 소셜로그인을 하기 위한 회원가입 사용자 구분
- isSocialLogin 상태로 렌더링을 조건부 처리
- 회원가입  POST data에서 유치원, 반정보는  name에서 id로 변경
- 회원가입 입력 필드: MainInfo, SubInfo, ChildInfo, ProfileImageUpload, KindergartenSelector, 회원가입 진행률: ProgressBar로 component분리 시킴
- 로그인 화면에 소셜 로그인 버튼 추가하고 클릭하면 회원가입 페이지로 연동해놓음(일반 회원가입과 렌더링 달라짐)

--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,7 @@
     "@types/styled-components": "^5.1.34",
     "@types/three": "^0.167.1",
     "axios": "^1.7.2",
+    "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
     "html2canvas": "^1.4.1",
@@ -34,6 +35,7 @@
     "postprocessing": "^6.36.0",
     "react": "^18.3.1",
     "react-calendar": "^5.0.0",
+    "react-canvas-confetti": "^2.0.7",
     "react-confetti": "^6.1.0",
     "react-datepicker": "^7.3.0",
     "react-dnd": "^16.0.1",
