feat: 상담 예약 일정 확정하기 로직 수정

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -295,3 +295,11 @@ spring.servlet.multipart.max-request-size=${SPRING_SERVLET_MULTIPART_MAX_REQUEST
 # URL 변경 필요 openvidu.url=https://kidslink.xyz:8443
 openvidu.url=http://localhost:4443/
 openvidu.secret=MY_SECRET
+# Enable recording
+openvidu.recording=true
+openvidu.recording.enabled=true
+# Recording path
+openvidu.recording.path=opt/openvidu/recordings
+
+# Maximum recording duration in seconds (default: 3600 seconds - 1 hour)
+openvidu.recording.max-length=3600
