feat: OAuth2 관련 Handler 추가 #S11P12C206-391
- OAuth2 관련 Handler 클래스 추가
- OAuth2 관련 객체 OAuth2Response 추가
- OAuth2 관련 Service 로직 추가 설정파일 변경

--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -14,6 +14,9 @@ server.ssl.key-store-password=${SSL_KEY_STORE_PASSWORD}
 server.ssl.keyStoreType=PKCS12
 server.ssl.keyAlias=tomcat
 
+# URL Change Please
+spring.security.oauth2.client.registration.naver.redirect-uri=${OAUTH2_NAVER_REDIRECT_URI:http://localhost:8080/login/oauth2/code/naver}
+spring.security.oauth2.client.registration.google.redirect-uri=${OAUTH2_GOOGLE_REDIRECT_URI:http://localhost:8080/login/oauth2/code/google}
 
 openvidu.url=https://minsun-openvidu-server-1:4443
 openvidu.secret=MY_SECRET
