--- a/backend/src/main/resources/application-dev.properties
+++ b/backend/src/main/resources/application-dev.properties
@@ -7,5 +7,6 @@ ai.server.url=http://localhost:5000
 server.url=http://localhost:8080/api
 file.profile-dir=src/main/resources/static/profiles
 
-
+spring.security.oauth2.client.registration.naver.redirect-uri=${OAUTH2_NAVER_REDIRECT_URI:http://localhost:8080/login/oauth2/code/naver}
+spring.security.oauth2.client.registration.google.redirect-uri=${OAUTH2_GOOGLE_REDIRECT_URI:http://localhost:8080/login/oauth2/code/google}
 
