--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -14,6 +14,5 @@ server.ssl.key-store-password=${SSL_KEY_STORE_PASSWORD}
 server.ssl.keyStoreType=PKCS12
 server.ssl.keyAlias=tomcat
 
-
-openvidu.url=https://minsun-openvidu-server-1:4443
+openvidu.url=https://www.kidslink.xyz:4430
 openvidu.secret=MY_SECRET
