--- a/frontend/.env.production
+++ b/frontend/.env.production
@@ -1,4 +1,6 @@
-VITE_API_KEY=https://www.kidslink.xyz/api
-VITE_WEBSOCKET_URL=wss://www.kidslink.xyz/ws/bus
-VITE_KAKAO_API_KEY=137497cddc91726fbd7601efe1bb0072
-VITE_OPENVIDU_SECRET=MY_SECRET
+VITE_API_KEY="https://www.kidslink.xyz/api"
+VITE_WEBSOCKET_URL="wss://www.kidslink.xyz/ws/bus"
+VITE_KAKAO_API_KEY="137497cddc91726fbd7601efe1bb0072"
+VITE_OPENVIDU_SECRET="MY_SECRET"
+VITE_OPENVIDU_URL="https://www.kidslink.xyz/api/video"
+PUBLIC_URL="https://www.kidslink.xyz"
