--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,6 +17,7 @@
     "@mui/icons-material": "^5.16.5",
     "@mui/material": "^5.16.5",
     "@react-google-maps/api": "^2.19.3",
+    "@react-spring/web": "^9.7.4",
     "@react-three/drei": "^9.109.2",
     "@react-three/fiber": "^8.16.8",
     "@react-three/postprocessing": "^2.16.2",
@@ -28,6 +29,7 @@
     "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
+    "history": "^5.3.0",
     "html2canvas": "^1.4.1",
     "livekit-client": "^2.4.0",
     "moment": "^2.30.1",
