--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -16,6 +16,7 @@ server.ssl.keyAlias=tomcat
 
 # URL Change Please
 spring.security.oauth2.client.registration.naver.redirect-uri=${OAUTH2_NAVER_REDIRECT_URI:http://localhost:8080/login/oauth2/code/naver}
+spring.security.oauth2.client.registration.kakao.redirect-uri=${OAUTH2_KAKAO_REDIRECT_URI:http://localhost:8080/login/oauth2/code/kakao}
 spring.security.oauth2.client.registration.google.redirect-uri=${OAUTH2_GOOGLE_REDIRECT_URI:http://localhost:8080/login/oauth2/code/google}
 
 openvidu.url=https://www.kidslink.xyz:4430
