--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -50,6 +50,19 @@ spring.security.oauth2.client.provider.naver.token-uri=https://nid.naver.com/oau
 spring.security.oauth2.client.provider.naver.user-info-uri=https://openapi.naver.com/v1/nid/me
 spring.security.oauth2.client.provider.naver.user-name-attribute=response
 
+# oauth2:kakao:registration
+spring.security.oauth2.client.registration.kakao.client-name=${OAUTH2_KAKAO_CLIENT_NAME}
+spring.security.oauth2.client.registration.kakao.client-id=${OAUTH2_KAKAO_CLIENT_ID}
+spring.security.oauth2.client.registration.kakao.client-secret=${OAUTH2_KAKAO_CLIENT_SECRET}
+spring.security.oauth2.client.registration.kakao.authorization-grant-type=authorization_code
+spring.security.oauth2.client.registration.kakao.scope=account_email
+
+# oauth2:kakao:provider
+spring.security.oauth2.client.provider.kakao.authorization-uri=https://kauth.kakao.com/oauth/authorize
+spring.security.oauth2.client.provider.kakao.token-uri=https://kauth.kakao.com/oauth/token
+spring.security.oauth2.client.provider.kakao.user-info-uri=https://kapi.kakao.com/v2/user/me
+spring.security.oauth2.client.provider.kakao.user-name-attribute=response
+
 # oauth2:google:registration
 spring.security.oauth2.client.registration.google.client-name=${OAUTH2_GOOGLE_CLIENT_NAME}
 spring.security.oauth2.client.registration.google.client-id=${OAUTH2_GOOGLE_CLIENT_ID}
