--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -2,4 +2,4 @@ FROM openjdk:17-jdk
 ARG JAR_FILE=build/libs/*.jar
 COPY ${JAR_FILE} app.jar
 COPY src/main/resources/static/profiles /app/src/main/resources/static/profiles
-ENTRYPOINT ["java", "-Dspring.profiles.active=prod", "-jar", "app.jar"]
+ENTRYPOINT ["java", "-Dspring.profiles.active=prod -", "-jar", "app.jar"]
