fix: AI 서버 수정 #S11P12C206-921
- 병렬적 요청 처리 구현

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -73,7 +73,7 @@ spring.security.oauth2.client.registration.google.scope=profile,email
 
 # \uB514\uBC84\uAE45 \uB85C\uADF8 \uD65C\uC131\uD654
 #logging.level.org.springframework.web=DEBUG
-logging.level.com.ssafy.kidslink=debug
+logging.level.com.ssafy.kidslink=info
 
 # URL \uBCC0\uACBD \uD544\uC694 openvidu.url=https://kidslink.xyz:8443
 openvidu.url=${OPENVIDU_URL:http://localhost:4443/}
