--- a/frontend/package.json
+++ b/frontend/package.json
@@ -52,6 +52,7 @@
     "react-router-dom": "^6.25.1",
     "react-slick": "^0.30.2",
     "react-spinners": "^0.14.1",
+    "react-switch": "^7.0.0",
     "react-toastify": "^10.0.5",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.12",
