--- a/backend/src/main/resources/application-prod.properties
+++ b/backend/src/main/resources/application-prod.properties
@@ -3,7 +3,7 @@
 #
 #server.ssl.enabled=true
 ai.server.url=http://flask_backend:5000
-frontend.server.url=https://www.kidslink.xyz
+frontend.server.url=https://kidslink.xyz
 server.url=https://www.kidslink.xyz:8080/api
 file.profile-dir=/app/src/main/resources/static/profiles
 
@@ -13,6 +13,7 @@ server.ssl.key-store=/app/keystore.p12
 server.ssl.key-store-password=${SSL_KEY_STORE_PASSWORD}
 server.ssl.keyStoreType=PKCS12
 server.ssl.keyAlias=tomcat
+
 
 # URL Change Please
 
