--- a/frontend/package.json
+++ b/frontend/package.json
@@ -42,6 +42,8 @@
     "react-datepicker": "^7.3.0",
     "react-dnd": "^16.0.1",
     "react-dnd-html5-backend": "^16.0.1",
+    "react-dnd-scrolling": "^1.3.8",
+    "react-dnd-scrollzone": "^5.0.0",
     "react-dom": "^18.3.1",
     "react-icons": "^5.2.1",
     "react-kakao-maps-sdk": "^1.1.27",
