--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "formik": "^2.4.6",
     "history": "^5.3.0",
     "html2canvas": "^1.4.1",
+    "immer": "10.1.1",
     "livekit-client": "^2.4.0",
     "moment": "^2.30.1",
     "openvidu-browser": "^2.30.0",
