feat: dev 환경에서도 ssl 인증서를 통한 인증 추가  #S11P12C206-951

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -86,3 +86,5 @@ openvidu.recording.path=opt/openvidu/recordings
 
 # Maximum recording duration in seconds (default: 3600 seconds - 1 hour)
 openvidu.recording.max-length=3600
+
+#spring.profiles.include=ssl
