--- a/frontend/package.json
+++ b/frontend/package.json
@@ -58,7 +58,7 @@
     "react-spinners": "^0.14.1",
     "react-switch": "^7.0.0",
     "react-toastify": "^10.0.5",
-    "react-transition-group": "^4.4.5",
+    "react-transition-group": "4.4.5",
     "slick-carousel": "^1.8.1",
     "styled-components": "^6.1.12",
     "three": "^0.167.0",
