--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,7 +29,7 @@
     "canvas-confetti": "^1.9.3",
     "clsx": "^2.1.1",
     "formik": "^2.4.6",
-    "framer-motion": "11.3.24",
+    "framer-motion": "^11.3.24",
     "history": "^5.3.0",
     "html2canvas": "^1.4.1",
     "immer": "10.1.1",
@@ -49,7 +49,7 @@
     "react-dom": "^18.3.1",
     "react-draggable": "^4.4.6",
     "react-icons": "^5.2.1",
-    "react-intersection-observer": "9.13.0",
+    "react-intersection-observer": "^9.13.0",
     "react-kakao-maps-sdk": "^1.1.27",
     "react-loading-skeleton": "^3.4.0",
     "react-modal": "^3.16.1",
