fix: AI 서버 파일 압축 범위 감소  #S11P12C206-1002

--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -29,7 +29,8 @@ spring.profiles.active=${SPRING_PROFILES_ACTIVE:dev}
 frontend.server.url=${FRONTEND_URL:http://localhost:5173}
 
 file.upload-dir=${UPLOAD_DIR:C:/uploads}
-file.max-size=${FILE_MAX_SIZE:5242880}
+# 500KB
+file.max-size=${FILE_MAX_SIZE:542880}
 
 spring.servlet.multipart.max-file-size=${SPRING_SERVLET_MULTIPART_MAX_FILE_SIZE:20MB}
 spring.servlet.multipart.max-request-size=${SPRING_SERVLET_MULTIPART_MAX_REQUEST_SIZE:200MB}
